--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -162,3 +162,8 @@
 	text-decoration: none !important;
 	color: #666 !important;
 }
+
+.display-msg {
+	padding-left: 15px;
+	padding-right: 15px;
+}
